# roz

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml  stream_camera.py  test_audio.py
.claude/commands/: phase6.md
src/: __init__.py  config.py
src/detection/: __init__.py  motion_detector.py
src/hardware/: __init__.py  camera.py
src/llm/: __init__.py  prompt_config.py  rate_limiter.py  vision_analyzer.py
src/speech/: __init__.py  announcer.py
